# pyproject-template

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Readme.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md  patterns-doc.md  premissas-doc.md
docs/stylesheets/: extra.css
patterns-doc/: index.html
search/: search_index.json
site/: 404.html  index.html
site/premissas-doc/: index.html
site/stylesheets/: extra.css
src/: teste.py  teste.yml
