[tool.poetry]
name = "venv"
version = "0.0.1"
description = "Projeto template"
authors = ["pcastr"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7"
mkdocstrings-python = "^1.8.0"
mkdocs-material = "^9.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
