[tool.poetry]
name = "venv"
version = "0.0.1"
description = "Projeto template"
authors = ["pcastr"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
taskipy = "^1.12.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7"
mkdocstrings-python = "^1.8.0"
mkdocs-material = "^9.5.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
commitizen = "^3.13.0"


[tool.poetry.group.site.dependencies]
streamlit = "^1.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
docs = "mkdocs serve"
git-config = "pre-commit install && pre-commit install --hook-type commit-msg"
pre-commit = "pytest -v && git add . && pre-commit run"
commit = "pytest -v && git add . && cz commit"
push = "git push origin"
update = "git pull origin"
test = "pytest -v"

[tool.bandit]
exclude_dirs = ["tests"]
